{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 155,
  "lineage": "e616a818-75f7-5b2f-402b-9aad0307dcca",
  "resources": [
    {
      "module": "module.terraform_aws_loadbalancer",
      "mode": "managed",
      "type": "aws_alb",
      "name": "ping_server_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:690067217804:loadbalancer/app/ping-server-loadlbalancer/fe6fcb0f611949c8",
            "arn_suffix": "app/ping-server-loadlbalancer/fe6fcb0f611949c8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ping-server-loadlbalancer-1440738948.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:690067217804:loadbalancer/app/ping-server-loadlbalancer/fe6fcb0f611949c8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ping-server-loadlbalancer",
            "security_groups": [
              "sg-085c53d5aa4c60553"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a36393a98e83aa8a"
              },
              {
                "subnet_id": "subnet-0b67add9d1dba9844"
              }
            ],
            "subnets": [
              "subnet-0a36393a98e83aa8a",
              "subnet-0b67add9d1dba9844"
            ],
            "vpc_id": "vpc-09fe41d92ca07a0af",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.terraform_aws_loadbalancer.aws_security_group.loadbalancer",
            "module.terraform_aws_network.aws_subnet.pub_subnet1",
            "module.terraform_aws_network.aws_subnet.pub_subnet2",
            "module.terraform_aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_aws_loadbalancer",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:690067217804:listener/app/ping-server-loadlbalancer/fe6fcb0f611949c8/4145ed1a1677e395",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:690067217804:targetgroup/alb-target-group/fb90653cbe053dca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:690067217804:listener/app/ping-server-loadlbalancer/fe6fcb0f611949c8/4145ed1a1677e395",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:690067217804:loadbalancer/app/ping-server-loadlbalancer/fe6fcb0f611949c8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform_aws_loadbalancer.aws_alb.ping_server_loadbalancer",
            "module.terraform_aws_loadbalancer.aws_alb_target_group.default",
            "module.terraform_aws_loadbalancer.aws_security_group.loadbalancer",
            "module.terraform_aws_network.aws_subnet.pub_subnet1",
            "module.terraform_aws_network.aws_subnet.pub_subnet2",
            "module.terraform_aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_aws_loadbalancer",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:690067217804:targetgroup/alb-target-group/fb90653cbe053dca",
            "arn_suffix": "targetgroup/alb-target-group/fb90653cbe053dca",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:690067217804:targetgroup/alb-target-group/fb90653cbe053dca",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09fe41d92ca07a0af"
          },
          "dependencies": [
            "module.terraform_aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_aws_loadbalancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:690067217804:security-group/sg-085c53d5aa4c60553",
            "description": "security_group_alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085c53d5aa4c60553",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security_group_alb",
            "name_prefix": "",
            "owner_id": "690067217804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "production",
              "Name": "security-group--alb"
            },
            "tags_all": {
              "Env": "production",
              "Name": "security-group--alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fe41d92ca07a0af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform_aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_aws_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "external_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:690067217804:internet-gateway/igw-01e6b737300db0817",
            "id": "igw-01e6b737300db0817",
            "owner_id": "690067217804",
            "vpc_id": "vpc-09fe41d92ca07a0af"
          },
          "dependencies": [
            "module.terraform_aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_aws_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "external_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:690067217804:route-table/rtb-0957ec9e0c306d9b3",
            "id": "rtb-0957ec9e0c306d9b3",
            "owner_id": "690067217804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e6b737300db0817",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09fe41d92ca07a0af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform_aws_network.aws_internet_gateway.external_gateway",
            "module.terraform_aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_aws_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03994d44d0fb2a6f9",
            "route_table_id": "rtb-0957ec9e0c306d9b3",
            "subnet_id": "subnet-0a36393a98e83aa8a"
          },
          "dependencies": [
            "module.terraform_aws_network.aws_internet_gateway.external_gateway",
            "module.terraform_aws_network.aws_route_table.external_route",
            "module.terraform_aws_network.aws_subnet.pub_subnet1",
            "module.terraform_aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_aws_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6a3c6a9aafea631",
            "route_table_id": "rtb-0957ec9e0c306d9b3",
            "subnet_id": "subnet-0b67add9d1dba9844"
          },
          "dependencies": [
            "module.terraform_aws_network.aws_internet_gateway.external_gateway",
            "module.terraform_aws_network.aws_route_table.external_route",
            "module.terraform_aws_network.aws_subnet.pub_subnet2",
            "module.terraform_aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_aws_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:690067217804:subnet/subnet-0a36393a98e83aa8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a36393a98e83aa8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690067217804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09fe41d92ca07a0af"
          },
          "dependencies": [
            "module.terraform_aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_aws_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:690067217804:subnet/subnet-0b67add9d1dba9844",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b67add9d1dba9844",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690067217804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09fe41d92ca07a0af"
          },
          "dependencies": [
            "module.terraform_aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_aws_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:690067217804:vpc/vpc-09fe41d92ca07a0af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0b5ddf16d9b2fbcf9",
            "default_route_table_id": "rtb-0d169aa2d08275f4f",
            "default_security_group_id": "sg-0fab85e5380e13a6d",
            "dhcp_options_id": "dopt-164c796e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09fe41d92ca07a0af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d169aa2d08275f4f",
            "owner_id": "690067217804"
          }
        }
      ]
    },
    {
      "module": "module.terraform_aws_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ping_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:690067217804:security-group/sg-0d9bd265eab754361",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0d9bd265eab754361",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4567,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4567
              }
            ],
            "name": "terraform-20220509122919675100000002",
            "name_prefix": "terraform-",
            "owner_id": "690067217804",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09fe41d92ca07a0af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform_aws_network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}